Change alpha value for Lasso Regression

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1197,16 +1197,24 @@
      "output_type": "stream",
      "text": [
       "Cancer dataset\n",
-      "R-squared score (training): 0.000\n",
-      "R-squared score (test): -0.000\n",
+      "R-squared score (training): 0.690\n",
+      "R-squared score (test): 0.688\n",
       "\n",
-      "RMSE: 0.483\n",
-      "lasso regression linear model intercept: 0.6267605633802817\n",
+      "RMSE: 14.736\n",
+      "lasso regression linear model intercept: 1.318335153150341\n",
       "lasso regression linear model coeff:\n",
-      "[-0. -0. -0. -0. -0. -0. -0. -0. -0.  0. -0.  0. -0. -0.  0. -0. -0. -0.\n",
-      "  0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0. -0.]\n",
-      "Non-zero features: 0\n",
-      "Features with non-zero weight (sorted by absolute magnitude):\n"
+      "[-0.         -0.09693723 -0.         -0.         -0.         -0.\n",
+      " -0.         -0.00976008 -0.          0.         -0.         -0.\n",
+      " -0.         -0.         -0.          0.          0.         -0.\n",
+      " -0.          0.         -0.67533596 -0.08334443 -0.         -0.\n",
+      " -0.         -0.         -0.         -1.05550389 -0.         -0.        ]\n",
+      "Non-zero features: 5\n",
+      "Features with non-zero weight (sorted by absolute magnitude):\n",
+      "\tPctOccupMgmtProf, -1.056\n",
+      "\tPctNotHSGrad, -0.675\n",
+      "\thouseholdsize, -0.097\n",
+      "\tPctBSorMore, -0.083\n",
+      "\tpctUrban, -0.010\n"
      ]
     }
    ],
@@ -1221,7 +1229,7 @@
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "linlasso = Lasso(alpha=2.0, max_iter = 10000).fit(X_train_scaled, y_train)\n",
+    "linlasso = Lasso(alpha=0.01, max_iter = 10000).fit(X_train_scaled, y_train)\n",
     "\n",
     "print('Cancer dataset')\n",
     "\n",
@@ -1256,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1265,6 +1273,21 @@
      "text": [
       "Lasso regression: effect of alpha regularization\n",
       "parameter on number of features kept in final model\n",
+      "\n",
+      "Alpha = 0.01\n",
+      "Features kept: 5, r-squared training: 0.69, r-squared test: 0.69\n",
+      "\n",
+      "Alpha = 0.02\n",
+      "Features kept: 2, r-squared training: 0.63, r-squared test: 0.63\n",
+      "\n",
+      "Alpha = 0.05\n",
+      "Features kept: 1, r-squared training: 0.42, r-squared test: 0.42\n",
+      "\n",
+      "Alpha = 0.10\n",
+      "Features kept: 0, r-squared training: 0.00, r-squared test: -0.00\n",
+      "\n",
+      "Alpha = 0.20\n",
+      "Features kept: 0, r-squared training: 0.00, r-squared test: -0.00\n",
       "\n",
       "Alpha = 0.50\n",
       "Features kept: 0, r-squared training: 0.00, r-squared test: -0.00\n",
@@ -1297,7 +1320,7 @@
     "print('Lasso regression: effect of alpha regularization\\n\\\n",
     "parameter on number of features kept in final model\\n')\n",
     "\n",
-    "for alpha in [0.5, 1, 2, 3, 5, 10, 20, 50]:\n",
+    "for alpha in [0.005, 0.02, 0.05, 0.1, 0.2, 0.5, 1, 2, 3, 5, 10, 20, 50]:\n",
     "    linlasso = Lasso(alpha, max_iter = 10000).fit(X_train_scaled, y_train)\n",
     "    r2_train = linlasso.score(X_train_scaled, y_train)\n",
     "    r2_test = linlasso.score(X_test_scaled, y_test)\n",
